--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^5.0.0
+  provider: ^6.0.5
 
   image_picker: ^1.0.2
   image_cropper: ^5.0.0
+  permission_handler: ^10.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
