--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   image_picker: ^1.0.2
   image_cropper: ^5.0.0
-  permission_handler: ^10.4.3
+  # permission_handler: ^10.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
