--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_holo_date_picker: ^1.1.0
   cloud_firestore: ^4.8.4
   timeline_tile: ^2.0.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
