--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   image_picker: ^1.0.2
   image_cropper: ^5.0.0
+  path_provider: ^2.1.1
+  shared_preferences: ^2.2.1
   # permission_handler: ^10.4.3
 
 
@@ -41,7 +43,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.7.2
-  firebase_core : ^2.15.0
+  firebase_core : ^2.15.1
+  firebase_storage: ^11.2.6
   google_fonts: ^5.1.0
   font_awesome_flutter: ^10.5.0
   google_sign_in: ^6.1.4
