--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   localstorage: ^4.0.1+4
   firebase_storage: ^11.2.6
   url_launcher: ^6.1.12
+  multi_dropdown: ^2.0.1
+  weekday_selector: ^1.1.0
+  custom_radio_grouped_button: ^2.2.0
 
 dev_dependencies:
   flutter_test:
