--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -238,46 +238,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/icon.png
-    - lib/assets/icon_small.png
-    - lib/assets/user.png
+    - lib/assets/
 
-    - lib/assets/images/medication.gif  
-    - lib/assets/icons/cream.gif
-    - lib/assets/icons/drops.gif
-    - lib/assets/icons/foam.gif
-    - lib/assets/icons/herbal.gif
-    - lib/assets/icons/spray.gif
-    - lib/assets/icons/nutrients.gif
-    - lib/assets/icons/patch.gif
-    - lib/assets/icons/pill.gif
-    - lib/assets/icons/pills.gif
-    - lib/assets/icons/pills (1).gif
-    - lib/assets/icons/powder.gif
-    - lib/assets/icons/liquid.gif
-    - lib/assets/icons/lotion.gif
-    - lib/assets/icons/inhalator.gif
-    - lib/assets/icons/nasalspray.gif
-    - lib/assets/icons/suppository.gif
-    - lib/assets/icons/syringe.gif
-    - lib/assets/icons/syringe.gif
-    - lib/assets/icons/tablet.gif
-    - lib/assets/icons/tube.gif
-    - lib/assets/icons/no_reminders.gif
-    - lib/assets/icons/emergency-call.gif
-    - lib/assets/icons/height.gif
-    - lib/assets/icons/weight-scale.gif
-    - lib/assets/icons/more.gif
-    - lib/assets/icons/1.gif
-    - lib/assets/icons/2.gif
-    - lib/assets/icons/3.gif
-    - lib/assets/icons/4.gif
-    - lib/assets/icons/no_alarm.gif
-    - lib/assets/images/taking_med.png
-    - lib/assets/images/bell.png
-    - lib/assets/images/ambulance.png
+    - lib/assets/images/ 
+    - lib/assets/icons/
 
-    - assets/audio/marimba.mp3
+    - assets/audio/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
