--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   flutter_svg: ^1.1.6
   day_night_time_picker: 
   text_scroll: ^0.2.0
-  alarm: ^1.2.2
+  # alarm: ^1.2.2
+  alarm: ^2.1.1
   # awesome_notifications: any
   localstorage: ^4.0.1+4
   firebase_storage: ^11.2.6
@@ -66,6 +67,9 @@ dependencies:
   weekday_selector: ^1.1.0
   custom_radio_grouped_button: ^2.2.0
   intl: ^0.18.1
+  week_of_year: ^2.2.0
+  optimize_battery: ^0.0.4
+  webview_flutter: ^4.4.2
 
 dev_dependencies:
   flutter_test:
